[package]
name = "contract-integrator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
hedera = { git="https://github.com/hiero-ledger/hiero-sdk-rust.git" }
protoc = "2.28.0"
serde = { version =  "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = {version= "1.48.0", features = ["full"] }
clap = { version = "4.5.50", features = ["derive", "env"] }
log = "0.4.28"
num-bigint = "0.4.6"
chrono = "0.4.42"
time = "0.3.44"
